@@ -4,7 +4,6 @@ package edu.colorado.phet.fractions.intro.intro.view;
 import edu.colorado.phet.common.phetcommon.model.property.SettableProperty;
 import edu.colorado.phet.common.phetcommon.view.controls.PropertyRadioButton;
 import edu.colorado.phet.common.piccolophet.nodes.ControlPanelNode;
-import edu.colorado.phet.common.piccolophet.nodes.layout.HBox;
 import edu.colorado.phet.common.piccolophet.nodes.layout.VBox;
 import edu.umd.cs.piccolox.pswing.PSwing;
 
@@ -13,8 +12,9 @@ import edu.umd.cs.piccolox.pswing.PSwing;
  */
 public class OptionsControlPanel extends ControlPanelNode {
     public OptionsControlPanel( SettableProperty<Visualization> visualization ) {
-        super( new VBox( new HBox( new PSwing( new PropertyRadioButton<Visualization>( "Improper", visualization, Visualization.FRACTION ) {{setFont( FractionsIntroCanvas.CONTROL_FONT );}} ),
-                                   new PSwing( new PropertyRadioButton<Visualization>( "Mixed", visualization, Visualization.MIXED ) {{setFont( FractionsIntroCanvas.CONTROL_FONT );}} ) ) ) );
+        super( new VBox( new PSwing( new PropertyRadioButton<Visualization>( "None", visualization, Visualization.NONE ) {{setFont( FractionsIntroCanvas.CONTROL_FONT );}} ),
+                         new PSwing( new PropertyRadioButton<Visualization>( "Improper", visualization, Visualization.FRACTION ) {{setFont( FractionsIntroCanvas.CONTROL_FONT );}} ),
+                         new PSwing( new PropertyRadioButton<Visualization>( "Mixed", visualization, Visualization.MIXED ) {{setFont( FractionsIntroCanvas.CONTROL_FONT );}} ) ) );
     }
 
 }
